tests/snapshots/cli_help__asset_update_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Update assets

Usage: mf asset update [OPTIONS] [PATH]

Arguments:
  [PATH]  

Options:
      --root <PATH>             Mind Repo root directory
      --set-url <SET_URL>       
      --channel <CHANNEL>       
      --config <PATH>           Config file path
      --all                     
  -v, --verbose...              Verbose output
  -n, --dry-run                 Preview changes without writing
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
