tests/snapshots/cli_help__init_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Initialize a directory as a Mind Repo

Usage: mf init [OPTIONS] [PATH]

Arguments:
  [PATH]  Target directory path (defaults to current directory)

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
