tests/snapshots/cli_help__project_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage projects

Usage: mf project [OPTIONS] [COMMAND]

Commands:
  new      Create a project
  list     List projects [aliases: ls]
  archive  Archive a project
  lint     Lint a project
  index    Index projects
  show     Show project details
  update   Update project metadata
  import   Import a directory as a project
  rename   Rename a project
  remove   Remove a project [aliases: rm]

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
